--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL = 'mongodb+srv://medpharmstore2023:medpharm123@cluster0.2orp8hr.mongodb.net/';
+MONGO_URL = mongodb+srv://medpharmstore2023:medpharm123@cluster0.2orp8hr.mongodb.net/;
